--- a/switcheroocss.css
+++ b/switcheroocss.css
@@ -28,20 +28,25 @@
   cursor: pointer;
   display: inline-block;
   padding: 5px 10px;
-  background-color: #f0f0f0;
-  border: 1px solid #ccc;
+  background: var(--neutralgrad);
+  border: 1px solid var(--neutraldarkerop);
   border-radius: 3px;
   user-select: none;
   position: fixed;
   top: 4rem;
   left: 2rem;
-  font-weight: bold;
+  font-weight: 700;
   z-index: 1000;
+  font-size:10px;
+  letter-spacing:0.1rem;
+  color:var(--accentclr);
+  transition:1s ease;
 }
 
 /* Hover effect */
 .contswitch-label:hover {
-  background-color: #e0e0e0;
+  color:var(--accentclrdark);
+  transition:1s ease;
 }
 
 /* Hidden content container */
