--- a/switcheroocss.css
+++ b/switcheroocss.css
@@ -28,17 +28,14 @@
   cursor: pointer;
   display: inline-block;
   padding: 5px 10px;
-  background: var(--neutralgrad);
-  border: 1px solid var(--neutraldarkerop);
+  background:var(--neutralgrad);
   border-radius: 3px;
   user-select: none;
   position: fixed;
-  top: 4rem;
+  top: 0.75rem;
   left: 2rem;
-  font-weight: 700;
+  font-weight: bold;
   z-index: 1000;
-  font-size:10px;
-  letter-spacing:0.1rem;
   color:var(--accentclr);
   transition:1s ease;
 }
@@ -53,7 +50,7 @@
 .contswitcher {
   display: none; /* fully hidden by default */
   position: fixed;
-  top: 5.5rem; /* below the button */
+  top: 3rem; /* below the button */
   left: 2rem;
   width: 300px; /* adjust as needed */
   max-height: 80vh; /* limit height to viewport */
@@ -72,10 +69,15 @@
 
 /* + / − toggle */
 .contswitch-label::after {
-  content: " +";
+  content: " personnages ⇅";
+  font-family:reddit sans condensed;
+  font-size:10px;
+  font-weght:700;
+  text-transform:uppercase;
+  letter-spacing:0.1rem;
 }
 .contswitch-input:checked + .contswitch-label::after {
-  content: " −";
+  content: " personnages ⇅";
 }
     
     .switcheroo {}
