--- a/switcheroocss.css
+++ b/switcheroocss.css
@@ -121,7 +121,9 @@
   filter:grayscale(1);
   transition:0.5s ease;
 }
-  
+.switcheroo__squircle.active, .switcheroo__squircle:hover {
+    outline-width: 0;
+}
 
 /* ========== DELETE BUTTON ========== */
 
