--- a/switcheroocss.css
+++ b/switcheroocss.css
@@ -152,10 +152,10 @@
 
 .switcheroo__popper {
   position: absolute;
-  padding: .5rem .75rem;
-  border-radius: 4px;
+  padding: 0rem;
+  border-radius: 0.3rem;
 
-  background: var(--text);
+  background: var(--neutral);
   color: var(--textcolor);
 
   opacity: 0;
@@ -168,40 +168,30 @@
 .switcheroo__popper::before {
   content: "";
   position: absolute;
-  width: 12px;
-  height: 12px;
-  background: var(--text);
-  transform: rotate(-45deg);
 }
 
-/* vertical */
-.switcheroo[direction="vertical"] .switcheroo__popper {
-  left: 150%;
-  top: 50%;
-  transform: translateY(-50%) scale(.95);
-}
-.switcheroo[direction="vertical"] .switcheroo__popper::before {
-  left: -6px;
-  top: 50%;
-  transform: translateY(-50%) rotate(-45deg);
-}
+
 
 /* horizontal */
-.switcheroo[direction="horizontal"] .switcheroo__popper {
-  top: 150%;
-  left: 50%;
-  transform: translateX(-50%) scale(.95);
+.switcheroo .switcheroo__popper {
+  top: 4rem;
+  left: 0rem;
+  transform: translatey(1%);
+  transition:0.5s ease;
+  font-size:10px;
+  text-transform:uppercase;
+  font-family:'reddit sans condensed';
+  font-weight:700;
+  letter-spacing:0.1rem;
+  background:var(--neutral);
 }
-.switcheroo[direction="horizontal"] .switcheroo__popper::before {
-  top: -6px;
-  left: 50%;
-  transform: translateX(-50%) rotate(-45deg);
+.switcheroo .switcheroo__popper::before {
+ display:none;
+  left: 0%;
+  transform: translatey(1%);
 }
 
-.switcheroo__squircle:hover .switcheroo__popper {
-  opacity: 1;
-  transform: translate(-50%, -50%) scale(1);
-}
+
 
 /* ========== DIVIDER ========== */
 
