--- a/switcheroocss.css
+++ b/switcheroocss.css
@@ -21,24 +21,21 @@
 .contswitch-input { display: none; }
 
 .contswitch-label {
-  position: fixed;
-  top: .2rem;
-  left: 20rem;
-  z-index: 1000;
-  height:1.6rem;
-  padding: 5px 10px;
-  border-radius: 3px;
-  background: var(--neutralgrad);
-  color: var(--accentclr);
-
-  font-weight: 700;
-  cursor: pointer;
-  user-select: none;
-
-  transition: color .3s ease;
-  display:flex;
-  align-items:center;
-  justify-content:cen
+    position: fixed;
+    top: .3rem;
+    left: 2.8rem;
+    z-index: 1000;
+    height: 2rem;
+    background: var(--accentgradop2);
+    color: var(--accentclr);
+    font-weight: 700;
+    cursor: pointer;
+    user-select: none;
+    transition: color .3s ease;
+    display: flex;
+    align-items: center;
+    padding: 0.3rem;
+    border-radius: 0.5rem;
 }
 
 .contswitch-label:hover {
@@ -46,10 +43,14 @@
 }
 
 .contswitch-label::after {
-  content: "⇅";
-  font: 700 10px "Reddit Sans Condensed";
-  text-transform: uppercase;
-  letter-spacing: .1rem;
+    content: "⇅";
+    font: 700 10px "Reddit Sans Condensed";
+    text-transform: uppercase;
+    letter-spacing: .1rem;
+    background: var(--neutralgrad);
+    border-radius: 0.2rem;
+    box-shadow: var(--shadowbox);
+    padding: 0.3rem;
 }
 
 /* ========== SWITCHER CONTAINER ========== */
